--- a/public/style.css
+++ b/public/style.css
@@ -1,30 +1,25 @@
 /* style.css */
 
-html, body {
-  height: auto; /* não fixa altura */
-  min-height: 100vh; /* garante que a tela ocupe no mínimo a altura da viewport */
-  margin: 0;
-  padding: 0;
-  background-color: #111;
-  font-family: 'Press Start 2P', cursive, sans-serif;
-  color: white;
-  display: flex;
-  flex-direction: column; /* empilha verticalmente */
-  align-items: center; /* centraliza horizontalmente */
+body {
+    margin: 0;
+    background-color: #111;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: 'Press Start 2P', cursive, sans-serif;
+    color: white; 
+     overflow: hidden;
 }
-
 
 canvas {
-  background-color: #222;
-  border: 2px solid #fff;
-  width: 100vw;      /* largura total da viewport */
-  max-width: 1100px; /* limite máximo de largura */
-  height: auto;      /* ajusta a altura proporcional */
-  max-height: 700px; /* limite máximo de altura */
-  display: block;
-  margin: 20px 0 0 0; /* espaçamento acima para separar do topo */
+    background-color: #222;
+    border: 2px solid #fff;
+    width: 100vw;
+    height: 100vh;
+    max-width: 1100px;
+    max-height: 700px;
 }
-
 
 .overlay-screen {
     position: fixed;
@@ -321,16 +316,13 @@ canvas {
 }
 
 .touch-controls-container {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin: 150px 0 0 0;  /* só margem em cima para afastar do canvas */
-  width: 100%;         /* largura total da tela */
-  box-sizing: border-box;
-  padding: 0 20px;     /* opcional, pra dar um espaçamento nas laterais */
+    display: flex;
+    justify-content: center; /* centraliza os botões horizontalmente */
+    gap: 30px;               /* espaço entre todos os botões */
+    margin-top: 40px;        /* distância do canvas */
+    width: 100%;
+    position: relative;      /* padrão para não sobrepor */
 }
-
-
 
 /* Botões individuais */
 .touch-button {
